--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
   "name": "friendfinder",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jamlith/FriendFinder.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jamlith/FriendFinder/issues"
+  },
+  "homepage": "https://github.com/jamlith/FriendFinder#readme",
+  "description": "",
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.4",
+    "express-handlebars": "^3.0.0",
+    "expresss": "0.0.0"
+  }
 }
